--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="site-post lg-post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center table width-full color-white text-shadow-medium pt6 pb4 article-side-padding" style="background: linear-gradient( rgba({{ page.color }}, 0.8), rgba({{ page.color }}, 0.8)), url({{ page.hero-image }}); background-size: cover; background-position: center center; height: 70vh">
+  <header class="align-center table width-full color-white text-shadow-medium pt6 pb4 article-side-padding" style="background: linear-gradient( rgba({{ page.color }}, {{ page.color-alpha }}), rgba({{ page.color }}, {{ page.color-alpha }})){% if page.hero-image %}, url({{ page.hero-image }}); background-size: cover; background-position: center center {% endif %}; height: 70vh">
 
       {% include layout/subpage-logo.html %}
       {% include layout/subpage-close.html %}
