--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,10 +24,9 @@ layout: default
 </div>
 
 <script>
-
   {% include layout/scripts.js %}
-
-  window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-  ga('create','{{ site.google_analytics }}','auto');ga('send','pageview')
 </script>
-<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+
+{% if jekyll.environment == 'production' %}
+  {% include analytics.html %}
+{% endif %}
