Fix the analytics include pathing

--- a/_includes/layout/splash.html
+++ b/_includes/layout/splash.html
@@ -29,5 +29,5 @@
 </script>
 
 {% if jekyll.environment == 'production' %}
-  {% include analytics.html %}
+  {% include layout/analytics.html %}
 {% endif %}
