--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,5 +38,5 @@ layout: default
 </script>
 
 {% if jekyll.environment == 'production' %}
-  {% include analytics.html %}
+  {% include layout/analytics.html %}
 {% endif %}
