--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -38,5 +38,5 @@
 </script>
 
 {% if jekyll.environment == 'production' %}
-  {% include analytics.html %}
+  {% include layout/analytics.html %}
 {% endif %}
