--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -50,5 +50,5 @@ layout: default
 </script>
 
 {% if jekyll.environment == 'production' %}
-  {% include analytics.html %}
+  {% include layout/analytics.html %}
 {% endif %}
