--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -18,7 +18,7 @@
             </div>
 
             {% if post.cover-image %}
-            <img src="{{ post.cover-image }}" width="450" height="400" class="block width-full no-select">
+            <img src="{{ post.cover-image }}" width="450" height="400" class="block width-full no-select" alt="{{ post.title }}">
             {% endif %}
 
           </a>
