More Homepage SEO tweaks

--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -11,9 +11,12 @@
     </a>
     {% if page.url == '/' %}</h1>{% endif %}
 
+    {% if page.url == '/' %}<h3>{% endif %}
     <span class="center-block font-size-7 uppercase tracking-super opacity-5">
       Designer &amp; Developer
     </span>
+    {% if page.url == '/' %}</h3>{% endif %}
+
     
     <p class="sm-header-tagline font-size-4 font-weight-3 my4 center-block" style="max-width: 19rem">
       Passionate about creating<br /> digital products—obsessed with simplicity &amp; experience.
