--- a/_includes/modules/bytesize-demo.html
+++ b/_includes/modules/bytesize-demo.html
@@ -3,7 +3,7 @@
     <form class="icon-controller center-block align-left font-size-5 line-height-none box-shadow-light p4 br3 sm-br0" style="background: #f8f9fb;">
         
         Size:
-        <input type="range" min="2" max="6" step="0.01" value="3.5" oninput="changeSize(this.value)" onchange="changeSize(this.value)" class="mt1 mb3">
+        <input type="range" min="2" max="6" step="0.01" value="3.2" oninput="changeSize(this.value)" onchange="changeSize(this.value)" class="mt1 mb3">
         
         Weight (stroke-width):
         <input type="range" min="2" max="8" step="0.01" value="5" oninput="changeStroke(this.value)" onchange="changeStroke(this.value)" class="mt1 mb3">
@@ -16,7 +16,7 @@
     </form>
 
 
-    <div id="icons" class="pt5 round center-block color-page" style="font-size: 3.5em; stroke-width: 5%; max-width: 50rem">
+    <div id="icons" class="px2 pt5 round center-block color-page" style="font-size: 3.2em; stroke-width: 5%; max-width: 50rem">
  
     <svg id="i-search" class="bs-icon" viewBox="0 0 32 32">
         <circle cx="14" cy="14" r="12" />
@@ -346,6 +346,10 @@
 
     <svg id="i-twitter" class="bs-icon" viewBox="0 0 64 64">
         <path stroke-width="0" fill="currentColor" d="M60 16 L54 17 L58 12 L51 14 C42 4 28 15 32 24 C16 24 8 12 8 12 C8 12 2 21 12 28 L6 26 C6 32 10 36 17 38 L10 38 C14 46 21 46 21 46 C21 46 15 51 4 51 C37 67 57 37 54 21 Z" />
+    </svg>
+
+    <svg id="i-github" class="bs-icon" viewBox="0 0 64 64">
+        <path stroke-width="0" fill="currentColor" d="M32 0 C14 0 0 14 0 32 0 53 19 62 22 62 24 62 24 61 24 60 L24 55 C17 57 14 53 13 50 13 50 13 49 11 47 10 46 6 44 10 44 13 44 15 48 15 48 18 52 22 51 24 50 24 48 26 46 26 46 18 45 12 42 12 31 12 27 13 24 15 22 15 22 13 18 15 13 15 13 20 13 24 17 27 15 37 15 40 17 44 13 49 13 49 13 51 20 49 22 49 22 51 24 52 27 52 31 52 42 45 45 38 46 39 47 40 49 40 52 L40 60 C40 61 40 62 42 62 45 62 64 53 64 32 64 14 50 0 32 0 Z" />
     </svg>
 
     </div>
