--- a/_includes/layout/head.html
+++ b/_includes/layout/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %}{{ page.title | escape }} &mdash; {% if page.subtitle %}{{ page.subtitle }}{% else %}{{ site.title }}{% endif %}{% else %}{{ site.title | escape }} &mdash; {{ site.description }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}">
+  <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% endif %}">
   <meta name="author" content="{{ site.title }}">
 
   <meta name="twitter:card" content="summary">
@@ -15,7 +15,7 @@
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:title" content="{% if page.title %}{{ page.title | escape }} &mdash; {% if page.subtitle %}{{ page.subtitle }}{% else %}{{ site.title }}{% endif %}{% else %}{{ site.title | escape }} &mdash; {{ site.description }}{% endif %}">
-  <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}">
+  <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% endif %}">
 
   {% if page.hero-image %}
     <meta property="og:image" content="{{ page.hero-image | prepend: site.url }}">
