--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -18,7 +18,7 @@
             </div>
 
             {% if post.cover-image %}
-            <img src="{{ post.cover-image }}" width="450" height="400" class="project-img fade block width-full no-select" alt="{{ post.title }}" onload="this.classList.remove('hold-fade')" style="transition-delay: {{ forloop.index | times:150 }}ms" />
+            <img src="{{ post.cover-image }}" width="450" height="400" class="project-img block width-full no-select" alt="{{ post.title }}" onload="this.setAttribute('data-imgload', 'done')" style="transition-delay: {{ forloop.index | times:150 }}ms" />
             {% endif %}
 
           </a>
@@ -34,10 +34,10 @@
 
 <script>
   [].forEach.call(
-    document.querySelectorAll(".project-img"), 
+    document.querySelectorAll('.project-img'), 
       function(e){
         if(!e.complete){
-          e.classList.add("hold-fade");
+          e.setAttribute('data-imgload', 'queuefade');
         }
       }
   );
