Add text-decoration-skip: ink to all normal links

--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -45,7 +45,9 @@ button, input, select, textarea {
 }
 
 a {
-    background-color: transparent
+    background-color: transparent;
+    -webkit-text-decoration-skip: ink;
+    text-decoration-skip: ink;
 }
 
 a:active, a:hover, input:focus, select:focus, textarea:focus, button:focus {
