--- a/_includes/layout/nav.html
+++ b/_includes/layout/nav.html
@@ -1,17 +1,17 @@
-<nav class="nav lg-nav bg-slate width-full align-center py3">
-                <div class="navlink inline-block px3"><a href="{{ site.baseurl }}/" {% if page.url == "/" or page.url == "/work/" %}
+<nav aria-label="Navigation" class="nav lg-nav bg-slate width-full align-center py3">
+                <div class="navlink inline-block px3"><a title="Work" href="{{ site.baseurl }}/" {% if page.url == "/" or page.url == "/work/" %}
                            class="font-size-5 underline-none lowercase py3 color-white navlink-on" 
                 {% else %} class="font-size-5 underline-none lowercase py3 color-white navlink-off" {% endif %}>Work</a></div>{% comment %}
 
-{% endcomment %}<div class="navlink inline-block px3"><a href="{{ site.baseurl }}/articles/" {% if page.url == "/articles/" %}
+{% endcomment %}<div class="navlink inline-block px3"><a title="Articles" href="{{ site.baseurl }}/articles/" {% if page.url == "/articles/" %}
                            class="font-size-5 underline-none lowercase py3 color-white navlink-on" 
                 {% else %} class="font-size-5 underline-none lowercase py3 color-white navlink-off" {% endif %}>Articles</a></div>{% comment %}
 
-{% endcomment %}<div class="navlink inline-block px3"><a href="{{ site.baseurl }}/about/" {% if page.url == "/about/" %}
+{% endcomment %}<div class="navlink inline-block px3"><a title="About" href="{{ site.baseurl }}/about/" {% if page.url == "/about/" %}
                            class="font-size-5 underline-none lowercase py3 color-white navlink-on" 
                 {% else %} class="font-size-5 underline-none lowercase py3 color-white navlink-off" {% endif %}>About</a></div>{% comment %}
 
-{% endcomment %}<div class="navlink inline-block px3"><a href="{{ site.baseurl }}/contact/" {% if page.url == "/contact/" %}
+{% endcomment %}<div class="navlink inline-block px3"><a title="Contact" href="{{ site.baseurl }}/contact/" {% if page.url == "/contact/" %}
                            class="font-size-5 underline-none lowercase py3 color-white navlink-on" 
                 {% else %} class="font-size-5 underline-none lowercase py3 color-white navlink-off" {% endif %}>Contact</a></div>
 
