--- a/_includes/layout/subpage-logo.html
+++ b/_includes/layout/subpage-logo.html
@@ -1,4 +1,4 @@
-<a href="{{ site.baseurl }}/" class="absolute l0 t0 font-size-5 inline-block nowrap dim-color-white underline-none lowercase px1 py2">
+<a href="{{ site.baseurl }}/" title="Home" class="absolute l0 t0 font-size-5 inline-block nowrap dim-color-white underline-none lowercase px1 py2">
   <span class="inline-block-middle svg-shadow-medium pt1 pl1">
     {% include icons/icon-logo.svg width="32" height="32" stroke-width="4%" class="pt1 pl1" %}
   </span>
