--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -7,13 +7,13 @@
     <section class="width-full center-block align-center pb3">
 
         {% for post in site.categories.work %}<div class="md-width-50 inline-block p2">
-          <a class="center-block color-white underline-none line-height-none text-shadow-medium box-shadow-medium br3 overflow-hidden" style="background: rgb({{ post.color }});" href="{{ post.url | prepend: site.baseurl }}">
+          <a aria-label="Open Project" class="center-block color-white underline-none line-height-none text-shadow-medium box-shadow-medium br3 overflow-hidden" style="background: rgb({{ post.color }});" href="{{ post.url | prepend: site.baseurl }}">
 
             <div class="center-block px3 pt5 pb2">
                 <h2 class="font-size-2">{{ post.title }}</h2>
                 <div class="block font-size-5 tracking-slight font-weight-5 py3">{{ post.subtitle }}</div>
                 <div class="inline-block font-size-6 font-weight-4 tracking-slight br5 px3 py2 mt1 mb2" style="background: rgba(0,0,0,0.14)">
-                  {{ post.year }} <small class="bullet inline-block-middle opacity-7">&bull;</small> {{ post.role }}
+                  {{ post.year }} <small class="bullet inline-block-middle opacity-8">&bull;</small> {{ post.role }}
                 </div>
             </div>
 
