--- a/_includes/modules/bytesize-demo.html
+++ b/_includes/modules/bytesize-demo.html
@@ -8,7 +8,7 @@
         Weight (stroke-width):
         <input type="range" min="2" max="8" step="0.01" value="5" oninput="changeStroke(this.value)" onchange="changeStroke(this.value)" class="mt1 mb3">
         
-        <label class="block mt1 mb3"><input type="checkbox" checked oninput="changeStyleRound()" onchange="changeStyleRound()"> Make icon edges rounded</label>
+        <label class="block mt1 mb3"><input type="checkbox" checked onchange="changeStyleRound()"> Make icon edges rounded</label>
 
         Color:
         <input type="color" value="#4d5772" oninput="changeColor(this.value)" onchange="changeColor(this.value)" class="mt1 block w8 h5 br2">
