--- a/_includes/layout/head.html
+++ b/_includes/layout/head.html
@@ -7,6 +7,10 @@
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% endif %}">
   <meta name="author" content="{{ site.title }}">
 
+  {% if page.noindex == true %}
+  <meta name="robots" content="noindex">
+  {% endif %}
+
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@danklammer">
   <meta name="twitter:creator" content="@danklammer">
