--- a/_includes/layout/social-links.html
+++ b/_includes/layout/social-links.html
@@ -1,3 +1,4 @@
 <div class="lg-absolute {% if page.url == '/' %}sm-hide{% endif %} l0 b3 width-full align-center pt4" style="color: rgba(29, 161, 242, 1);">
     <a href="https://twitter.com/danklammer" title="@danklammer on Twitter" class="social-link inline-block align-center p1" style="-webkit-filter: drop-shadow(-1px -1px 0 rgba(255, 255, 255, .12)); filter: drop-shadow(-1px -1px 0 rgba(255, 255, 255, .12))">{% include icons/icon-twitter.svg width="48" height="48" %}</a>
+    <a href="https://github.com/danklammer" title="@danklammer on GitHub" class="social-link inline-block align-center p1 mt1" style="-webkit-filter: drop-shadow(-1px -1px 0 rgba(255, 255, 255, .12)); filter: drop-shadow(-1px -1px 0 rgba(255, 255, 255, .12))">{% include icons/icon-github.svg width="48" height="40" %}</a>
 </div>
