Add Instant.Page script

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,6 +27,8 @@ layout: default
   {% include layout/scripts.js %}
 </script>
 
+<script src="//instant.page/2.0.0" type="module" integrity="sha384-D7B5eODAUd397+f4zNFAVlnDNDtO1ppV8rPnfygILQXhqu3cUndgHvlcJR2Bhig8"></script>
+
 {% if jekyll.environment == 'production' %}
   {% include layout/analytics.html %}
 {% endif %}
